update project to be finish

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 
+
     <!-- Start Videos -->
         <div class="videos">
             <div class="main-title">
@@ -80,14 +81,50 @@
         </div>
     <!-- End Explore  -->
 
-    <!-- Start Statistics  -->
-        <div class="statics">
+    <!-- Start Statistics -->
+        <div class="st">
             <div class="container">
-                <div class="box">
-                    <div class="h3">/ Unlimited</div>
-                    <h4></h4>
-                    <div class="prog"></div>
-                    <p></p>
+                <div class="box" style="--clr:#89ec5b;--per:86;" >
+                    <div class="prog">
+                        <svg>
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                        <div class="number">
+                            <h3> 86 <span>%</span></h3>
+                        </div>
+                    </div>
+                    <h3>Users</h3>
+                    <h4>6 /Unlimited</h4>
+                    <p>Total number of the users in the workspace</p>
+                </div>
+                <div class="box" style="--clr:#eb5ae5;--per:72;" >
+                    <div class="prog">
+                        <svg>
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                        <div class="number">
+                            <h3> 72 <span>%</span></h3>
+                        </div>
+                    </div>
+                    <h3>Models</h3>
+                    <h4>577 /Unlimited</h4>
+                    <p>Total number of Models</p>
+                </div>
+                <div class="box" style="--clr:#5b98eb;--per:95;" >
+                    <div class="prog">
+                        <svg>
+                            <circle cx="70" cy="70" r="70"></circle>
+                            <circle cx="70" cy="70" r="70"></circle>
+                        </svg>
+                        <div class="number">
+                            <h3> 95 <span>%</span></h3>
+                        </div>
+                    </div>
+                    <h3>Generated Tests</h3>
+                    <h4>14515 /Unlimited</h4>
+                    <p>Total number of generated tests</p>
                 </div>
             </div>
         </div>
